--- a/styles/faq.css
+++ b/styles/faq.css
@@ -133,7 +133,7 @@ body {
   text-align: center;
   display: table;
   border-left: #a0a0a0 solid 1px;
-  width: 19.9%;
+  width: 20%;
   height: 50px;
   font-size: 85%;
 }
